# WebLoggy

./: .gitignore  README.md  README.ru.md  pyproject.toml
webloggy/: __init__.py  server.py
webloggy/core/: logger.py  models.py  page.py  storage.py
webloggy/web/static/: app.js  style.css
webloggy/web/templates/: index.html  page.html
